--- a/embedded-presentation/latex/beamerouterthememetropolis.sty
+++ b/embedded-presentation/latex/beamerouterthememetropolis.sty
@@ -101,7 +101,13 @@
   \metropolis@frametitlestrut@end%
   \end{beamercolorbox}%
 }
+\setbeamertemplate{frametitle continuation}{%
+  \usebeamerfont{frametitle}
+  \romannumeral \insertcontinuationcount
+}
 \newlength{\metropolis@progressinheadfoot}
+\newlength{\metropolis@progressinheadfoot@linewidth}
+\setlength{\metropolis@progressinheadfoot@linewidth}{0.4pt}
 \setbeamertemplate{progress bar in head/foot}{
   \nointerlineskip
   \setlength{\metropolis@progressinheadfoot}{%
@@ -109,8 +115,8 @@
   }%
   \begin{beamercolorbox}[wd=\paperwidth]{progress bar in head/foot}
     \begin{tikzpicture}
-      \fill[bg] (0,0) rectangle (\paperwidth, 0.4pt);
-      \fill[fg] (0,0) rectangle (\metropolis@progressinheadfoot, 0.4pt);
+      \fill[bg] (0,0) rectangle (\paperwidth, \metropolis@progressinheadfoot@linewidth);
+      \fill[fg] (0,0) rectangle (\metropolis@progressinheadfoot, \metropolis@progressinheadfoot@linewidth);
     \end{tikzpicture}%
   \end{beamercolorbox}
 }
