--- a/embedded-presentation/latex/beamercolorthememetropolis.sty
+++ b/embedded-presentation/latex/beamercolorthememetropolis.sty
@@ -46,6 +46,7 @@
     fg=black!2,
     bg=mDarkTeal
   }
+  \usebeamercolor[fg]{normal text}
 }
 \newcommand{\metropolis@colors@light}{
   \setbeamercolor{normal text}{%
