--- a/latex/vlsi_part2.tex
+++ b/latex/vlsi_part2.tex
@@ -22,8 +22,6 @@
 	  \titlepage
   \end{frame}
 
-
-
 \section{Προσομοιώσεις - Αποτελέσματα}
 
 	\begin{frame}{Τεχνητά δεδομένα}
@@ -38,9 +36,9 @@
 		\pause
 		Προσθήκη θορύβου ανάμεσα στις ακολουθίες
 	\end{frame}
-
-
-
+	
+	
+	
 	\begin{frame}{Τεχνητά δεδομένα}
 		Σύγκριση διαφορετικών υλοποιήσεων για μονή πρόβλεψη:\\
 		\vspace{1em}
@@ -51,7 +49,7 @@
   			\>β) προσαρμόζεται στις αλλαγές του περιβάλλοντος\\
   		\end{tabbing}
 	\end{frame}
-
+	
 	\begin{frame}{Τεχνητά δεδομένα}
 		Πολλαπλές προβλέψεις:
 		\vfill
@@ -62,7 +60,7 @@
 		\pause
 		Αιτία: Αναπαράσταση με \textbf{SDR} !!
 	\end{frame}
-
+	
 	\begin{frame}{Τεχνητά δεδομένα}
 		\begin{columns}
 		\column {0.4 \textwidth}
@@ -75,13 +73,13 @@
 		\column {0.6 \textwidth}
 			\vspace{1em}
 			\visible<1->{
-			\includegraphics[width=0.6 \textwidth,left]{../pics/sequence_order.jpg}}
-			\vspace{1em}
+			\includegraphics[width=0.6 \textwidth,center]{../pics/sequence_order.jpg}}
+			\vspace{0.5em}
 			\visible<2->{
-			\includegraphics[width=0.6 \textwidth,left]{../pics/cell_death.jpg}}
+			\includegraphics[width=0.65 \textwidth,center]{../pics/cell_death.jpg}}
 		\end{columns}
 	\end{frame}
-
+	
 	\begin{frame}{Πραγματικά δεδομένα}
 		Ζήτηση ταξί Νέας Υόρκης (διάστημα 30 λεπτών)
 		\includegraphics[width=0.5 \textwidth,center]{../pics/taxi_demand.jpg}
@@ -95,20 +93,12 @@
 			\includegraphics[width=0.6 \textwidth,left]{../pics/taxi_accuracy.jpg}
 		\end{columns}
 	\end{frame}
-
-	\begin{frame}{Πραγματικά δεδομένα}
-		Προσαρμογή σε αλλαγή των δεδομένων εισόδου\\
-		\includegraphics[width=0.6 \textwidth,center]{../pics/taxi_adaptation.jpg}
-		\vfill
-		\pause
-		Το HTM κατάφερε να μάθει το νέο μοντέλο σε 2 εβδομάδες!
-
-	\end{frame}
-
-
+	
+	
+	
 \section{Hardware}
-
-
+	
+	
 	\begin{frame}{SpiNNaker Chip}
 		Yψηλής παραλληλοποίησης υπολογιστικό σύστημα για την μοντελοποίηση και προσομοίωση spiking 				neural networks.
 		\pause
@@ -122,7 +112,7 @@
 			\includegraphics[width=0.75 \textwidth,left]{../pics/CMP.jpg}
 		\end{columns}
 	\end{frame}
-
+	
 	\begin{frame}{SpiNNaker Network}
 		SpiNNaker: Πίνακας από κόμβους που περιέχουν CMP και 128MB SDRAM σε κοινό package.
 		\pause
@@ -138,10 +128,10 @@
 					\item[--] 90KW ισχύς
 				\end{itemize}
 			\column{0.5 \textwidth}
-				\includegraphics[width=0.9 \textwidth,left]{../pics/Spinnaker.jpg}
+				\includegraphics[width=0.9 \textwidth,left]{../pics/SpiNNaker.jpg}
 		\end{columns}
 	\end{frame}
-
+	
 	\begin{frame}{Χαρακτηριστικά SpiNNaker}
 		\begin{description}[Sensor output]
 			  \item[Επικοινωνία] Address Event Representation (AER), NoC
@@ -153,35 +143,37 @@
 			  \vfill
 			  \item[Κατανάλωση] Ασύγχρονη Επικοινωνία\\
 			  Sleep mode στην idle κατάσταση \\
+			  Επιλογή ARM968 και SDRAM
 		\end{description}
 	\end{frame}
-
+	
 	\begin{frame}{Παράδειγμα υλοποίησης}
 		Σύστημα για classification χειρόγραφων ψηφίων (MNIST database) μέσω Deep Neural Network
-		\vfill
+		\vspace{1em}
 		\pause
 		\begin{columns}
 		\column {0.4 \textwidth}
 			\begin{itemize}
 			\item<2->[--] Ακρίβεια
 			\item<3->[--] Ισχύς: 0.3 Watt
-			\item<4->[--] Latency
+			\item<4->[--] Latency 
 			\end{itemize}
-
+			
 		\column {0.6 \textwidth}
 		\visible<2->{
-			\includegraphics[width=0.6 \textwidth,left]{../pics/Accuracy.jpg}
+		\\
+			\includegraphics[width=0.8 \textwidth,left]{../pics/Accuracy.jpg}
 		}
-			\vspace{1em}
+			\vspace{0em}
 		\visible<4->{
-			\includegraphics[width=0.6 \textwidth,left]{../pics/Latencies.jpg}
+			\includegraphics[width=0.8 \textwidth,left]{../pics/Latencies.jpg}
 		}
 		\end{columns}
-
-
-
+		
+		
+		
 	\end{frame}
-
+	
 	\begin{frame}{BrainScaleS Project (BSS)}
 	Υβριδική πλατφόρμα: Cluster + Νευρομορφικό σύστημα
 	\vfill
@@ -193,7 +185,7 @@
 	\vfill
 	Mixed-signal: Αναλογικά νευρωνικά κυκλώματα, Ψηφιακή επικοινωνία
 	\end{frame}
-
+	
 	\begin{frame} {HICANN chip}
 		Κάθε HICANN chip:
 		\begin{itemize}
@@ -202,7 +194,7 @@
 		\end{itemize}
 		\pause
 		\vfill
-		Ένα wafer περιέχει $364$ HICANN cores, δηλαδή:
+		Ένα wafer περιέχει $364$ HICANN chips, δηλαδή:
 		\begin{itemize}
 			\item[--] $200\cdot 10^3$ νευρώνες
 			\item[--]$45\cdot 10^6$ συνάψεις
@@ -210,9 +202,9 @@
 		\pause
 		\vfill
 		Η σημερινή πλατφόρμα αποτελείται 20 wafers.
-
+		
 	\end{frame}
-
+	
 	\begin{frame} {HICANN Chip}
 		\begin{columns}
 		\column {0.5 \textwidth}
@@ -225,7 +217,7 @@
 				\item<2->[--]Διαχωρισμός σε reticles
 				\item<2->[--]Συνδέσεις μέσω πυκνού δικτυώματος από wires
 			\end{itemize}
-
+			
 		\column {0.5 \textwidth}
 			\visible<1->{
 			\includegraphics[width=0.7 \textwidth,left]{../pics/wafer.jpg}}
@@ -234,7 +226,7 @@
 			\includegraphics[width=0.8 \textwidth,left]{../pics/reticle.jpg}}
 		\end{columns}
 	\end{frame}
-
+	
 	\begin{frame} {HICANN Chip}
 		\begin{columns}
 		\column {0.5 \textwidth}
@@ -249,7 +241,7 @@
 			\includegraphics[width=0.9 \textwidth,left]{../pics/insideHICANN.jpg}}
 			\end{columns}
 	\end{frame}
-
+	
 	\begin{frame}{Συνάψεις}
 			\begin{itemize}
 				\item<1->[--]4 bit SRAM για το βάρος
@@ -258,7 +250,26 @@
 			\end{itemize}
 		\includegraphics[width=0.8 \textwidth,center]{../pics/synapses.jpg}
 	\end{frame}
+	
+	\begin{frame}{Adaptive Exponential Model}
+		\begin{tabbing}
+  			To AdEx περιγράφεται από 2 μεταβλητές:  \=α) Δυναμικό Μεμβράνης\\
+  			\>β) Adaptation w
+  		\end{tabbing}
+  			\pause
+  			Σε DC είσοδο παρουσιάζει την εξής συμπεριφορά:
+  			\includegraphics[width=0.4 \textwidth,center]{../pics/adex.jpg}
+  			\pause
+  			\vfill
+  			Tο rise time εξαρτάται από το επίπεδο του input.
 
+		 
+	\end{frame}
+	
+	
+	
+	
+	
 	\begin{frame}{Υλοποίηση Spatial Pooler}
 		Time - based σύστημα: Οι νευρώνες με το μεγαλύτερο input ενεργοποιούνται πρώτοι\\
 		\vspace{2em}
@@ -266,11 +277,11 @@
 		\pause
 		\vfill
 		\begin{tabbing}
-  			Το inhibition cell(I):  \= α) διατηρεί την πυκνότητα\\
+  			Το inhibition cell(I):  \= α) διατηρεί τo sparsity\\
   			\> β) ελέγχει τη σταθερότητα\\
   		\end{tabbing}
 	\end{frame}
-
+	
 	\begin{frame}{Υλοποίηση Temporal Pooler}
 		\begin{columns}
 		\column {0.6\textwidth}
@@ -282,17 +293,63 @@
 				\vspace{1em}
 				\item<3->[--] Το Inhibition (I) καθορίζει ποιοι νευρώνες του ενεργού multicolumn 							ενεργοποιούνται
 			\end{itemize}
-
+			
 		\column {0.4\textwidth}
 			\includegraphics[width=1 \textwidth,center]{../pics/temporal_hardware.jpg}
 		\end{columns}
-
+		
 	\end{frame}
-
+	
 	\begin{frame}{Αποτελέσματα προσομοιώσεων}
-
-
+		\begin{columns}
+		\column {0.5 \textwidth}
+			\begin{itemize}
+				\item<1->[--]Ενεργοποίηση νευρώνων με μεγαλύτερο overlap
+			\end{itemize}
+			\vspace{5em}
+			\begin{itemize}
+				\item<2->[--]Διατήρηση συσχετίσεων εισόδου-εξόδου
+			\end{itemize}
+			
+		\column {0.5 \textwidth}
+		
+			\visible<1->{
+			\vspace{1em}
+			\includegraphics[width=0.9 \textwidth,left]{../pics/spatialsim1.jpg}}
+			\vspace{0.5em}
+			\visible<2->{
+			\includegraphics[width=0.9 \textwidth,left]{../pics/spatialsim2.jpg}}
+		\end{columns}
 	\end{frame}
+	
+	\begin{frame}{Βιβλιογραφία}
+		\only<1>{
+		[1] Y.LeCun, "Deep learning and convolutional networks", Hot Chips 27 Symposium (HCS), 2015 IEEE\newline
+		[2] J.Hawkins and S.Ahmad, "Why Neurons Have Thousands of Synapses, a Theory of Sequence Memory in Neocortex",Front. Neural Circuits, 30 March 2016\newline
+		[3] Y.Cui, S.Ahmad and J.Hawkins, "Continuous Online Sequence Learning with an Unsupervised
+Neural Network Model", Neural Computation 28, 2474–2504 (2016)\newline
+		[4] J. Schemmel, J. Fieres, and K. Meier, “Wafer-scale integration of analog neural networks,” in Proc. IEEE Int. Joint Conf. Neural Netw., Jun. 2008, pp. 431–438 \newline}
+		\only<2>{
+		[5]  E. Painkras, L. A. Plana, J. Garside, S. Temple, F. Galluppi, C. Patterson, D. R. Lester, A. D. Brown, and S. B. Furber, “Spinnaker: A 1-w 18-core system-on-chip for massively-parallel neural network simulation,” IEEE J. Solid-State Circuits, vol. 48, no. 8, pp. 1943–1953, Aug.2013\newline
+		[6] Kanerva, P. (1988). Sparse Distributed Memory. Cambridge, MA: The MIT Press\newline
+		[7] S.Billaudelle and S.Ahmad, Porting HTM Models to the Heidelberg Neuromorphic
+Computing Platform \newline
+		[8] HTM school: Video lectures provided on YouTube by Numenta}
+
+		
+	
+	\end{frame}
+	
+	\begin{frame}
+	\vspace{4em}
+	\centering{\Huge{\textbf{ΕΥΧΑΡΙΣΤΟΥΜΕ ΓΙΑ ΤΗΝ ΠΡΟΣΟΧΗ ΣΑΣ}}}\\
+	\vspace{3em}
+	\centering{\normalsize{Αταλόγλου Βασίλειος\\
+	Σαμαράς-Τσακίρης Κωνσταντίνος}}
+	
+	\end{frame}
+
+
 
 
 \end{document}
