Add Vasilis name to report

--- a/report/report.tex
+++ b/report/report.tex
@@ -74,7 +74,7 @@
 \renewcommand{\subsection}{\FloatBarrier\Oldsubsection}	% or subsection
 
 \title{Προσαρμοστική Μηχανική Μάθηση \linebreak Hierarchical Temporal Memory και νευρομορφικό hardware}
-\author{Κωνσταντίνος Σαμαράς-Τσακίρης}
+\author{Βασίλειος Αταλόγλου και Κωνσταντίνος Σαμαράς-Τσακίρης}
 \date{\today}
 
 \begin{document}
